add support for upload history videos and add history step structure

--- a/server/themes/one-page-new-age/files/less/theme/wejs.less
+++ b/server/themes/one-page-new-age/files/less/theme/wejs.less
@@ -1,3 +1,7 @@
+.form-control.select2-hidden-accessible {
+  width: 1px;
+}
+
 #region-sidebar {
   .widget-mailchimp-subscription-form {
     margin-bottom: 20px;
