--- a/server/themes/one-page-new-age/files/public/style-lightblue-source.css
+++ b/server/themes/one-page-new-age/files/public/style-lightblue-source.css
@@ -7661,6 +7661,9 @@ body.iframe-page-type footer {
   color: #fff;
   text-decoration: underline;
 }
+.form-control.select2-hidden-accessible {
+  width: 1px;
+}
 #region-sidebar .widget-mailchimp-subscription-form {
   margin-bottom: 20px;
   padding: 15px;
