add complete registration step and improve user pages

--- a/server/themes/one-page-new-age/templates/server/html.hbs
+++ b/server/themes/one-page-new-age/templates/server/html.hbs
@@ -37,5 +37,7 @@
   {{{layoutHtml}}}
   {{{template 'partials/footer'}}}
   {{we-event event="we-html-body-end"}}
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
 </body>
 </html>
