--- a/server/themes/one-page-new-age/templates/server/user/edit.hbs
+++ b/server/themes/one-page-new-age/templates/server/user/edit.hbs
@@ -1,15 +1,19 @@
-<ul class="nav nav-tabs">
-  <li role="presentation" class="active">
-    {{#link-to 'user.edit' user.id}}
-      {{t 'user.profile.edit'}}
-    {{/link-to}}
-  </li>
-  <li role="presentation">
-    {{#link-to 'user.privacity' user.id}}
-      {{t 'Privacity'}}
-    {{/link-to}}
-  </li>
-</ul>
-<div class="tab-content">
-  {{{form-model 'user' data validationError}}}
-</div>
+{{!-- {{#if req.query.onlyRequired}}
+  oi
+{{else}} --}}
+  <ul class="nav nav-tabs">
+    <li role="presentation" class="active">
+      {{#link-to 'user.edit' user.id}}
+        {{t 'user.profile.edit'}}
+      {{/link-to}}
+    </li>
+    <li role="presentation">
+      {{#link-to 'user.privacity' user.id}}
+        {{t 'Privacity'}}
+      {{/link-to}}
+    </li>
+  </ul>
+  <div class="tab-content">
+    {{{form-model 'user' data validationError}}}
+  </div>
+{{!-- {{/if}} --}}
