update user profile

--- a/server/themes/one-page-new-age/files/less/theme/user.less
+++ b/server/themes/one-page-new-age/files/less/theme/user.less
@@ -88,3 +88,22 @@
     margin-top: -170px;
   }
 }
+
+.user-full-page {
+  .img-thumbnail.avatar {
+    margin-bottom: 10px;
+  }
+
+  .user-professional-activity {
+    text-transform: capitalize;
+  }
+}
+
+.user-location-data {
+  // text-align: center;
+  // font-weight: 700;
+  // padding: 10px 5px;
+  // border: 1px solid #ddd;
+  // border-radius: 4px;
+  // margin: 10px auto;
+}
