--- a/server/themes/one-page-new-age/files/public/style-lightblue-source.css
+++ b/server/themes/one-page-new-age/files/public/style-lightblue-source.css
@@ -7560,6 +7560,12 @@ body.iframe-page-type footer {
     margin-top: -170px;
   }
 }
+.user-full-page .img-thumbnail.avatar {
+  margin-bottom: 10px;
+}
+.user-full-page .user-professional-activity {
+  text-transform: capitalize;
+}
 .posts > .post-teaser {
   box-shadow: none;
   border: 1px solid #ccc;
