update history form to support vide and audio uploads to configurable google drive folder

--- a/server/themes/one-page-new-age/files/less/style-default.less
+++ b/server/themes/one-page-new-age/files/less/style-default.less
@@ -10,5 +10,6 @@
 @import 'comments.less';
 @import 'terms.less';
 @import 'build-with.less';
-@import 'wejs.less';
 @import 'slideshow.less';
+@import 'multistep.less';
+@import 'wejs.less';
