--- a/server/themes/one-page-new-age/templates/server/partials/header-topbar.hbs
+++ b/server/themes/one-page-new-age/templates/server/partials/header-topbar.hbs
@@ -1,5 +1,13 @@
 <div id="weAdminBar">
   <div class="container">
+    <ul class="nav navbar-left">
+      <li>
+        <a href="/history/create" class="main-menu-history-create-link">
+          <span class="glyphicon glyphicon-plus"></span> Contar uma história
+        </a>
+      </li>
+    </ul>
+
     {{#if req.user.id}}
       {{#if menuAuthenticated}}
         <ul class="nav navbar-right">
