update history findOne page with all avaible data

--- a/server/themes/one-page-new-age/files/public/style-lightblue-source.css
+++ b/server/themes/one-page-new-age/files/public/style-lightblue-source.css
@@ -7884,6 +7884,9 @@ body.body-main-index #region-content .widget.widget-slideshow .device-container 
     border: none !important;
   }
 }
+.history-title {
+  margin-top: 0px;
+}
 .form-control.select2-hidden-accessible {
   width: 1px;
 }
