add history breadcrumbs and user.publishedHistoryCount attr

--- a/server/themes/one-page-new-age/templates/server/history/delete.hbs
+++ b/server/themes/one-page-new-age/templates/server/history/delete.hbs
@@ -1,3 +1,10 @@
+<ol class="breadcrumb">
+  <li><a href="/">Início</a></li>
+  <li><a href="/history">Histórias</a></li>
+  <li><a href="/history/{{data.id}}">{{we-strip-tags text=data.title maxLength=30}}</a></li>
+  <li class="active">Deletar</li>
+</ol>
+
 <div class="text-center">
   <p>{{{t deleteMsg}}}</p>
   <form method="post">
