--- a/server/themes/one-page-new-age/templates/server/user/find.hbs
+++ b/server/themes/one-page-new-age/templates/server/user/find.hbs
@@ -1,3 +1,16 @@
+<div class="user-search">
+  <form action="/user">
+    <div class="input-group">
+      <input type="text" name="displayName_contains" class="form-control" placeholder="Nome do narrador" value="{{req.query.displayName_contains}}">
+      <span class="input-group-btn">
+        <button class="btn btn-default" type="submit">
+          <span class="glyphicon glyphicon-search"></span>
+      </button>
+      </span>
+    </div>
+  </form>
+</div>
+
 <div class="users text-center">
   {{#we-grid items=data cols=4}}
     <div class="thumbnail">
@@ -14,11 +27,9 @@
             {{we-strip-tags text=displayName maxLength=40}}
           </h4>
         {{/link-to}}
-
-        {{#if meta.membersCount}}
-          <div class="group-teaser-members-counter">{{meta.membersCount}} membros</div>
-        {{/if}}
       </div>
     </div>
   {{/we-grid}}
+
+  {{#unless data.length}}Não temos usuários com histórias públicadas nessa lista.{{/unless}}
 </div>
