--- a/server/themes/one-page-new-age/templates/server/history/create.hbs
+++ b/server/themes/one-page-new-age/templates/server/history/create.hbs
@@ -1,3 +1,9 @@
+<ol class="breadcrumb">
+  <li><a href="/">Início</a></li>
+  <li><a href="/history">Histórias</a></li>
+  <li class="active">Criar</li>
+</ol>
+
 {{multistep-steps
   steps=steps
   currentStep=1
