--- a/server/themes/one-page-new-age/templates/server/history/edit.hbs
+++ b/server/themes/one-page-new-age/templates/server/history/edit.hbs
@@ -1,3 +1,10 @@
+<ol class="breadcrumb">
+  <li><a href="/">Início</a></li>
+  <li><a href="/history">Histórias</a></li>
+  <li><a href="/history/{{data.id}}">{{we-strip-tags text=data.title maxLength=30}}</a></li>
+  <li class="active">Editar</li>
+</ol>
+
 {{multistep-steps
   steps=steps
   currentStep=currentStep
