--- a/server/themes/one-page-new-age/templates/server/history/find.hbs
+++ b/server/themes/one-page-new-age/templates/server/history/find.hbs
@@ -1,3 +1,8 @@
+<ol class="breadcrumb">
+  <li><a href="/">Início</a></li>
+  <li class="active">Histórias</li>
+</ol>
+
 <div class="actions">
 {{we-action-create-btn resourceName req}}
 </div>
