--- a/server/themes/one-page-new-age/templates/server/history/findOne.hbs
+++ b/server/themes/one-page-new-age/templates/server/history/findOne.hbs
@@ -1,3 +1,9 @@
+<ol class="breadcrumb">
+  <li><a href="/">Início</a></li>
+  <li><a href="/history">Histórias</a></li>
+  <li class="active">{{we-strip-tags text=data.title maxLength=30}}</li>
+</ol>
+
 <div class="history-findOne">
 
 <div class="row">
