--- a/server/themes/one-page-new-age/templates/server/partials/footer.hbs
+++ b/server/themes/one-page-new-age/templates/server/partials/footer.hbs
@@ -70,10 +70,10 @@
         <hr>
         <p>{{{req.we.systemSettings.siteFooter}}}<p>
       </div>
-      <div class="col-md-12 desenvolvido-por">
+{{!--       <div class="col-md-12 desenvolvido-por">
         <br>
         <p>Desenvolvido com <a href="https://linkysystems.com/#site-para-hoteis">Hotelinky</a> pela <a href="https://linkysystems.com">Linky Systems <img width="12" src="https://linkysystems.com/favicon.ico"></a><p>
-      </div>
+      </div> --}}
     </div>
 
     <br>
