--- a/server/themes/one-page-new-age/templates/server/history/find.hbs
+++ b/server/themes/one-page-new-age/templates/server/history/find.hbs
@@ -3,33 +3,48 @@
   <li class="active">Histórias</li>
 </ol>
 
-<div class="actions">
-{{we-action-create-btn resourceName req}}
-</div>
-<table class="table table-striped table-hover">
-  <thead>
-    <tr>
-      <th>ID</th>
-      <th>{{t 'actions'}}</th>
-    </tr>
-  </thead>
-  <tbody>
+<div class="history-findAll">
+  <div class="history-findAll-header">
+    <h2 class="hfah-title">Vivências que viram histórias.
+      <br>676 histórias que inspiram.</h2>
+    <div class="history-search">
+      <form>
+        <div class="input-group">
+          <input type="text" name="q" class="form-control" placeholder="Procure uma história" value="{{req.query.q}}">
+          <span class="input-group-btn">
+            <button class="btn btn-default" type="submit">
+              <span class="glyphicon glyphicon-search"></span>
+          </button>
+          </span>
+        </div>
+      </form>
+    </div>
+  </div>
 
-{{#each data}}
-  <tr>
-    <td>{{id}}</td>
-    <td>
-      {{we-action-view-btn ../resourceName this ../req id}}
-      {{we-action-edit-btn ../resourceName this ../req id}}
-      {{we-action-delete-btn ../resourceName this ../req id}}
-    </td>
-  </tr>
-{{/each}}
+  <div class="row dynamic-grid">
+    {{#each data}}
+      <div class="d-col col-xs-12 col-sm-6 col-md-4 col-lg-4 col-xg-4">
+        {{render-record-teaser modelName='history' record=this locals=..}}
+      </div>
+    {{else}}
+      <div class="col-md-12">
+        Não foi possível encontrar histórias para a lista.
+      </div>
+    {{/each}}
 
-  </tbody>
-  <tfoot>
-    <td colspan="2">
+    <div class="col-md-12">
       {{paginate count=metadata.count limit=query.limit currentPage=query.page req=req}}
-    </td>
-  </tfoot>
-</table>
+    </div>
+  </div>
+</div>
+<script type="text/javascript">
+(function($) {
+  $('.dynamic-grid').masonry({
+    // set itemSelector so .grid-sizer is not used in layout
+    itemSelector: '.d-col',
+    // use element for option
+    columnWidth: '.d-col',
+    percentPosition: true
+  });
+});
+</script>
