--- a/server/themes/one-page-new-age/files/less/theme/history.less
+++ b/server/themes/one-page-new-age/files/less/theme/history.less
@@ -10,6 +10,13 @@
   margin-top: 0px;
   font-size: 20px;
   color: #555;
+  margin-bottom: 7px;
+}
+
+.ht-creator-meta {
+  font-size: 11px;
+  color: #888;
+  margin-bottom: 7px;
 }
 
 .ht-creator {
