--- a/server/themes/one-page-new-age/files/public/style-default-source.css
+++ b/server/themes/one-page-new-age/files/public/style-default-source.css
@@ -7891,6 +7891,12 @@ body.body-main-index #region-content .widget.widget-slideshow .device-container 
   margin-top: 0px;
   font-size: 20px;
   color: #555;
+  margin-bottom: 7px;
+}
+.ht-creator-meta {
+  font-size: 11px;
+  color: #888;
+  margin-bottom: 7px;
 }
 .ht-creator .ht-creator-avatar {
   float: left;
