--- a/server/themes/one-page-new-age/files/less/theme/weAdminBar.less
+++ b/server/themes/one-page-new-age/files/less/theme/weAdminBar.less
@@ -6,7 +6,7 @@
   line-height: 32px;
   height: 32px;
   position: fixed;
-  top: 0;
+  top: 33px;
   left: 0;
   width: 100%;
   z-index: 99999;
@@ -40,6 +40,23 @@
 
 #afterWeadmin {
   height: 32px;
+}
+
+
+@media (max-width: 767px) {
+  .navbar-right,
+  .navbar-left {
+    width: 49%;
+  }
+
+  .navbar-left {
+    float: left;
+  }
+
+  .nav.navbar-right {
+    float: right;
+  }
+
 }
 
 // @media (max-width: 767px)
