--- a/server/themes/one-page-new-age/templates/server/html.hbs
+++ b/server/themes/one-page-new-age/templates/server/html.hbs
@@ -30,6 +30,13 @@
 </head>
 <body id="page-top" class="body-{{controller}}-{{action}} {{#each req.userRoleNames}}ur-{{this}} {{/each}} {{iframeClass}}">
 
+  <div id="barra-brasil" style="background:#7F7F7F; height: 20px; padding:0 0 0 10px;display:block;">
+    <ul id="menu-barra-temp" style="list-style:none;">
+      <li style="display:inline; float:left;padding-right:10px; margin-right:10px; border-right:1px solid #EDEDED"><a href="http://brasil.gov.br" style="font-family:sans,sans-serif; text-decoration:none; color:white;">Portal do Governo Brasileiro</a></li>
+      <li><a style="font-family:sans,sans-serif; text-decoration:none; color:white;" href="http://epwg.governoeletronico.gov.br/barra/atualize.html">Atualize sua Barra de Governo</a></li>
+    </ul>
+  </div>
+
   {{{template 'partials/fb-lib'}}}
 
   {{we-event event="we-html-body-start"}}
@@ -39,5 +46,7 @@
   {{we-event event="we-html-body-end"}}
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.15/jquery.mask.min.js"></script>
+
+  <script defer="defer" src="//barra.brasil.gov.br/barra.js" type="text/javascript"></script>
 </body>
 </html>
