--- a/server/themes/one-page-new-age/files/less/theme/weAdminBar.less
+++ b/server/themes/one-page-new-age/files/less/theme/weAdminBar.less
@@ -5,9 +5,9 @@
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
   line-height: 32px;
   height: 32px;
-  position: fixed;
-  top: 33px;
-  left: 0;
+  // position: fixed;
+  // top: 33px;
+  // left: 0;
   width: 100%;
   z-index: 99999;
   background: #23282d;
@@ -39,9 +39,8 @@
 }
 
 #afterWeadmin {
-  height: 32px;
+  // height: 32px;
 }
-
 
 @media (max-width: 767px) {
   .navbar-right,
