add complete count in history list/search

--- a/server/themes/one-page-new-age/templates/server/history/find.hbs
+++ b/server/themes/one-page-new-age/templates/server/history/find.hbs
@@ -6,7 +6,7 @@
 <div class="history-findAll">
   <div class="history-findAll-header">
     <h2 class="hfah-title">Vivências que viram histórias.
-      <br>676 histórias que inspiram.</h2>
+      <br>{{metadata.completeCount}} histórias que inspiram.</h2>
     <div class="history-search">
       <form>
         <div class="input-group">
