update images in record body text with floats

--- a/server/themes/one-page-new-age/files/less/theme/wejs.less
+++ b/server/themes/one-page-new-age/files/less/theme/wejs.less
@@ -258,3 +258,11 @@ body.is-mobile {
 .wrapper-barra-brasil {
   z-index: 199999;
 }
+
+img[style="float:left;"] {
+  margin: 8px 7px 0px 0px;
+}
+
+img[style="float:right;"] {
+  margin: 8px 0px 0px 7px;
+}
