--- a/server/themes/one-page-new-age/files/public/style-darkgreen-source.css
+++ b/server/themes/one-page-new-age/files/public/style-darkgreen-source.css
@@ -8305,3 +8305,9 @@ body.is-mobile .dropdown-menu > li > a.s-whatsapp-site {
 .wrapper-barra-brasil {
   z-index: 199999;
 }
+img[style="float:left;"] {
+  margin: 8px 7px 0px 0px;
+}
+img[style="float:right;"] {
+  margin: 8px 0px 0px 7px;
+}
