add url field feature

--- a/server/themes/one-page-new-age/files/less/theme/history.less
+++ b/server/themes/one-page-new-age/files/less/theme/history.less
@@ -40,3 +40,25 @@
   }
 
 }
+
+.we-form-group-videoUrlGroup {
+  width: 49%;
+  float: left;
+}
+.we-form-group-videoGroup {
+  width: 49%;
+  float: right;
+}
+
+.we-form-group-audioUrlGroup {
+  width: 49%;
+  float: left;
+}
+.we-form-group-audioGroup {
+  width: 49%;
+  float: right;
+}
+
+.we-form-actions {
+  clear: both;
+}
