--- a/server/themes/one-page-new-age/templates/server/history/find.hbs
+++ b/server/themes/one-page-new-age/templates/server/history/find.hbs
@@ -37,8 +37,8 @@
     </div>
   </div>
 </div>
-<script type="text/javascript">
-(function($) {
+<script>
+$(function($) {
   $('.dynamic-grid').masonry({
     // set itemSelector so .grid-sizer is not used in layout
     itemSelector: '.d-col',
