--- a/server/themes/one-page-new-age/templates/server/user/find.hbs
+++ b/server/themes/one-page-new-age/templates/server/user/find.hbs
@@ -12,8 +12,8 @@
 </div>
 
 <div class="users text-center">
-  {{#we-grid items=data cols=4}}
-    <div class="thumbnail">
+  {{#we-grid items=data cols=6}}
+    <div class="thumbnail user-teaser-item">
       {{#link-to 'user.findOne' id}}
         {{#if avatar}}
           {{we-image avatar 'medium' width="100%"}}
@@ -22,14 +22,23 @@
         {{/if}}
       {{/link-to}}
       <div class="caption">
+        {{log this}}
         {{#link-to 'user.findOne' id}}
           <h4 class="user-teaser-title">
             {{we-strip-tags text=displayName maxLength=40}}
           </h4>
+
+          {{#if atividade.length}}
+            {{#each atividade}}
+              <div class="atividade">{{we-strip-tags text=this maxLength=40}}</div>
+            {{/each}}
+          {{/if}}
         {{/link-to}}
       </div>
     </div>
   {{/we-grid}}
 
-  {{#unless data.length}}Não temos usuários com histórias públicadas nessa lista.{{/unless}}
+  {{#unless data.length}}Não temos usuários com histórias públicadas nessa lista.{{else}}
+    {{paginate count=metadata.count limit=query.limit currentPage=query.page req=req}}
+  {{/unless}}
 </div>
