--- a/server/themes/one-page-new-age/files/public/style-darkgreen-source.css
+++ b/server/themes/one-page-new-age/files/public/style-darkgreen-source.css
@@ -8333,3 +8333,13 @@ img[style="float:left;"] {
 img[style="float:right;"] {
   margin: 8px 0px 0px 7px;
 }
+.loader {
+  position: fixed;
+  left: 0px;
+  top: 0px;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  background: url('/public/project/loading.gif') 50% 50% no-repeat #f9f9f9;
+  opacity: .8;
+}
